[package]
name = "rustix-openpty"
version = "0.0.0"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
description = "Safe Rust bindings to `openpty` and related functions"
documentation = "https://docs.rs/rustix-openpty"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/sunfishcode/rustix-openpty"
edition = "2018"
keywords = ["terminal", "safe"]
categories = ["os::unix-apis"]
include = ["src", "Cargo.toml", "COPYRIGHT", "LICENSE*", "/*.md"]
rust-version = "1.48"

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
rustix = { version = "0.37.19", default-features = false, features = ["fs", "process", "pty", "termios"] }

[target.'cfg(not(any(target_os = "android", target_os = "linux")))'.dependencies]
rustix = { version = "0.37.19", default-features = false, features = [] }
libc = { version = "0.2.114", default-features = false }
errno = { version = "0.3.1", default-features = false }

[dev-dependencies]
rustix = { version = "0.37.19", features = ["termios"] }

[patch.crates-io]
rustix = { git = "https://github.com/bytecodealliance/rustix/" }
